[gd_scene load_steps=16 format=2]

[ext_resource path="res://FontText/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/bD.png" type="Texture" id=2]
[ext_resource path="res://Images/bI.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ChapterOneP1.gd" type="Script" id=4]
[ext_resource path="res://Sounds/inspiring-landscape-121838.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/9mm-pistol-shot-6349.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/barkingdogs.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 17
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BotaIzquierda:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 649 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BotaDerecha:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 768, 624 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Line:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Line2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Label3:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Fondo3:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "aparecer"
length = 25.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2.5, 5, 6.5, 7, 15.1, 25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BotaIzquierda:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 2.5, 3.5, 4.5, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 400, 770 ), Vector2( 640, 649 ), Vector2( 892, 512 ), Vector2( 1149, 393 ), Vector2( 1483, 223 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BotaDerecha:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 484, 807 ), Vector2( 768, 624 ), Vector2( 1022, 507 ), Vector2( 1270, 377 ), Vector2( 1477, 293 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label4:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Label:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Line:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Line2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "aparecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="ChapterOneP1" type="Node2D"]
script = ExtResource( 4 )

[node name="AudioShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
pitch_scale = 0.53

[node name="AudioShot2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
pitch_scale = 0.53

[node name="AudioShot3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
pitch_scale = 0.53

[node name="AudioFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -13.983
pitch_scale = 0.7
autoplay = true

[node name="AudioBarks" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -14.955

[node name="Fondo1" type="ColorRect" parent="."]
margin_right = 1284.0
margin_bottom = 724.0
color = Color( 0, 0, 0, 1 )

[node name="Fondo2" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Fondo2"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.0
margin_top = 250.0
margin_right = 201.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 1 )
text = "CAPÍTULO  1"

[node name="Label2" type="Label" parent="Fondo2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -25.0
margin_right = 103.5
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Los intrusos"

[node name="Line" type="ColorRect" parent="Fondo2"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1171.0
margin_top = -74.0
margin_right = -871.0
margin_bottom = -70.0

[node name="Line2" type="ColorRect" parent="Fondo2"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -420.0
margin_top = -74.0
margin_right = -120.0
margin_bottom = -70.0

[node name="BotaIzquierda" type="TextureRect" parent="Fondo2"]
margin_left = 640.0
margin_top = 649.0
margin_right = 824.001
margin_bottom = 1161.01
rect_rotation = 72.7
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="BotaDerecha" type="TextureRect" parent="Fondo2"]
margin_left = 768.0
margin_top = 624.0
margin_right = 952.001
margin_bottom = 1026.0
rect_rotation = 59.5
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Label3" type="Label" parent="Fondo2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -492.5
margin_top = -109.0
margin_right = 492.5
margin_bottom = 59.0
custom_fonts/font = SubResource( 6 )
text = "Hay dos cosas que llaman terriblemente la atención: la inteligencia de los animales y la bestialidad de los humanos."
autowrap = true

[node name="Label4" type="Label" parent="Fondo2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 263.0
margin_top = 109.0
margin_right = 510.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 7 )
text = "Flora Tristán"
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fondo2"]
autoplay = "aparecer"
anims/RESET = SubResource( 4 )
anims/aparecer = SubResource( 5 )

[node name="Fondo3" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1295.0
margin_bottom = 738.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fondo3"]
anims/RESET = SubResource( 8 )
anims/aparecer = SubResource( 9 )
